FIXED UNEVEN HEIGHTS ON ABOUT PAGE :P

--- a/styles/about.css
+++ b/styles/about.css
@@ -47,11 +47,13 @@
 	display: grid;
 	grid-auto-flow: row;
 	grid-template-columns: repeat(3, 25%);
-	grid-template-rows: repeat(1, 1fr);
+	/* grid-template-columns: repeat(3, minmax(0, 1fr)); */
+	/* grid-template-rows: repeat(1, 1fr); */
+	grid-auto-rows: 1fr;
 	grid-auto-columns: 100px;
 	grid-auto-rows: 1fr;
 	grid-column-gap: 5%;
-	/* grid-row-gap: 5%; */
+	/* grid-row-gap: 5%; */ /* there is only 1 row */
 	
 	width: 100%;
 	height: 30%;
@@ -67,7 +69,10 @@
 }
 
 .menu .menu-entry {
-	padding: 2%;
+	width: 100%;
+	height: 100%;
+	
+	padding: 3%;
 	
 	border: 1px solid rgba(255,255,255,.11);
 	border-left: 5px solid rgba(255,255,255,.11);
